# call_me_maybe

./: .gitignore  Makefile  main.py  pyproject.toml  readme.md  res.txt
data/input/: function_calling_tests.json  function_definitions.json
data/output/: function_calling_results.json
llm_sdk/: __init__.py
src/: __init__.py  __main__.py  function_scheme.py  generator.py  main.py  parse.py  path_extractor.py  prompt_reader.py  sieve.py  writer.py
