[project]
name = "llm-sdk"
version = "0.1.0"
description = "LLM SDK for local model inference"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0",
    "transformers>=4.40.0",
    "huggingface-hub>=0.20.0",
    "pydantic>=2.13.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["llm_sdk"]


[tool.mypy]
mypy_path = "src"
strict = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "llm_sdk.*"
ignore_errors = true
follow_imports = "skip"

[[tool.mypy.overrides]]
module = "llm_sdk"
ignore_errors = true
follow_imports = "skip"
